# zero-chain

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHECKLIST.md  COMPLETION_SUMMARY.md  Cargo.toml  EVM_FIXES_REPORT.md  FINAL_FIX_REPORT.md  FINAL_SUMMARY.md  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_STATUS.md  PROGRESS_REPORT_PHASE1.md  PROGRESS_UPDATE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  TPS_ANALYSIS.md
.github/workflows/: full-chain-e2e.yml  nightly-long-chain-qa.yml  pr-fast-checks.yml  redline-guard.yml  release-gate.yml
artifacts/release-gate/: go-no-go-report.md
benches/: evm_bench.rs  trie_bench.rs
crates/zeroapi/: Cargo.toml  README.md
crates/zeroapi/src/: http_server.rs  lib.rs  subscription.rs
crates/zeroapi/src/rest/: mod.rs
crates/zeroapi/src/rpc/: compute_adapter.rs  mod.rs
crates/zeroapi/src/ws/: mod.rs  server.rs  subscription.rs
crates/zeroapi/tests/: compute_redb_smoke.rs  compute_smoke.rs
crates/zerocli/: Cargo.toml  README.md
crates/zerocli/src/: main.rs
crates/zerocli/src/commands/: account.rs  block.rs  compute.rs  console.rs  init.rs  mod.rs  rpc.rs  run.rs  storage.rs  transaction.rs  wallet.rs
crates/zerocli/tests/: storage_rebuild_cli.rs
crates/zerocore/: Cargo.toml  README.md
crates/zerocore/benches/: 5sec_limit_test.rs  evm_contract_bench.rs  full_execution_bench.rs  gas_benchmark.rs  parallel_bench.rs  real_validation_bench.rs  realistic_io_bench.rs  signature_comparison.rs  transaction_bench.rs
crates/zerocore/src/: crypto.rs  lib.rs
crates/zerocore/src/account/: account.rs  manager.rs  mod.rs  utxo.rs
crates/zerocore/src/block/: mod.rs
crates/zerocore/src/blockchain/: chain.rs  fork_choice.rs  mod.rs  sync.rs  sync_full.rs
crates/zerocore/src/compute/: agent.rs  batch.rs  domain.rs  error.rs  execution.rs  mod.rs  object.rs  policy.rs  primitives.rs  scheduler.rs  tx.rs
crates/zerocore/src/consensus/: miner.rs  miner_full.rs  mod.rs
crates/zerocore/src/evm/: gas.rs  interpreter.rs  mod.rs  opcodes.rs  precompiles.rs
crates/zerocore/src/rlp/: decode.rs  encode.rs  mod.rs  stream.rs
crates/zerocore/src/state/: executor.rs  mod.rs
crates/zerocore/src/transaction/: mod.rs  pool.rs
crates/zerocore/test_contracts/: README.md
crates/zeronet/: Cargo.toml  README.md
crates/zeronet/src/: discovery.rs  lib.rs  peer.rs  protocol.rs  sync.rs  transport.rs
crates/zerostore/: Cargo.toml  README.md
crates/zerostore/src/: archive.rs  lib.rs
crates/zerostore/src/compute/: mod.rs
crates/zerostore/src/db/: mod.rs
crates/zerostore/src/index/: mod.rs
crates/zerostore/src/trie/: mod.rs  node.rs  proof.rs  trie.rs
deploy/observability/: docker-compose.yml  otel-collector.yaml
docs/: API.md  AUDIT_2026-03-16.md  CHAIN_MATURITY_GAP_CHECKLIST.md  CHAIN_WALLET_SECURITY_AUDIT_2026-05-28.md  CLI_WALLET_MINING_TUTORIAL.md  COMPUTE_JSON_SPEC.md  CROSS_STACK_COMPLETENESS_2026-03-08.md  DESIGN_PHILOSOPHY.md  ENGINEERING_REDLINES.md  FULL_CHAIN_E2E_2026-03-07.md  GETTING_STARTED.md  GO_NO_GO_CHECKLIST.md  GO_NO_GO_STATUS_2026-03-27.md  KEY_MANAGEMENT_ACCEPTANCE.md  MAINNET_BRINGUP_RUNBOOK.md  MAINNET_FIRST_WAVE_COMMANDS.md  MAINNET_LOCAL_BRINGUP.md  MAINNET_NODE_MATRIX.md  MAINNET_REMOTE_BRINGUP.md  MINING.md  NODE_SYNC_CHECKLIST.md  OBSERVABILITY.md  P0_P1_P2_EXECUTION_STATUS_2026-03-07.md  P0_RELEASE_BLOCKERS_2026-03.md  P2P_WEBSOCKET_CDN.md  POW_TARGET_SYNC_DEBUG_2026-05-31.md  REAL_SYNC_REMEDIATION_2026-03-08.md  STORAGE_ARCHITECTURE.md  STORAGE_SAVINGS_REPORT.md  UTXO-2.0-YELLOWPAPER.md  UTXO-Compute-Yellowpaper-v1.1.md  WORKSPACE_ACCEPTANCE_CHECKLIST.md
fixtures/compute_json/: address_owner_mint.json  ed25519_owner_mint.json
migrations/: 001_initial_schema.sql
scripts/: benchmark.sh  check_compute_json_fixtures.sh  cli_mining_smoke.sh  devnet.sh  fix_project.sh  full_chain_e2e.sh  mainnet.sh  mainnet_checklist.sh  mainnet_local_bringup.sh  mainnet_local_check.sh  mainnet_local_cycle.sh  mainnet_local_stop.sh  mainnet_remote_cycle.sh  mainnet_remote_preflight.sh  mainnet_strict_smoke.sh  no_silent_fallback.sh  node_sync_check.sh  p2p_node_failure_smoke.sh  p2p_three_node_smoke.sh  public_node_reset_and_verify.sh  public_node_soak_monitor.sh  run_tests.sh  storage_resilience_smoke.sh  testnet.sh  workspace_acceptance.sh
tests/: integration_test.rs
