[workspace]
resolver = "2"
members = [
    "crates/zerocore",
    "crates/zeronet",
    "crates/zerostore",
    "crates/zeroapi",
    "crates/zerocli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ZeroChain Team <team@zerocchain.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zerocchain/zero-chain"
homepage = "https://zerocchain.io"

[workspace.dependencies]
# Cryptography
sha3 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
rlp = "0.5"
rlp-derive = "0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"

# Networking
bytes = "1.5"
socket2 = "0.5"
dns-parser = "0.8"

# Database
rocksdb = "0.21"
redb = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Utils
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"

# ZeroChain crates
zerocore = { path = "crates/zerocore" }
zeronet = { path = "crates/zeronet" }
zerostore = { path = "crates/zerostore" }
zeroapi = { path = "crates/zeroapi" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
lto = true
opt-level = 3
