[package]
name = "zeroapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZeroChain API services - JSON-RPC, REST, WebSocket"

[dependencies]
zerocore.workspace = true
zeronet.workspace = true
zerostore.workspace = true

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
futures-util = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utils
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
hex.workspace = true
bytes.workspace = true
uuid = { version = "1.6", features = ["v4"] }

# WebSocket
tokio-tungstenite = "0.21"

# JSON-RPC types
jsonrpc-v2 = "0.12"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
