[package]
name = "zerocli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZeroChain CLI and node implementation"

[[bin]]
name = "zerocchain"
path = "src/main.rs"

[dependencies]
zerocore.workspace = true
zeronet.workspace = true
zeroapi.workspace = true

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3.9"
