[package]
name = "zerocli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZeroChain CLI and node implementation"

[[bin]]
name = "zerocchain"
path = "src/main.rs"

[dependencies]
zerocore.workspace = true
zeronet.workspace = true
zeroapi.workspace = true

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry = "0.24"
opentelemetry = "0.23"
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
clap = { version = "4.4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
chrono.workspace = true
uuid.workspace = true
sha3.workspace = true
sha2.workspace = true
aes-gcm = "0.10"
pbkdf2 = "0.12"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = "3.9"
