[package]
name = "zerocore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZeroChain core protocol implementation"

[dependencies]
# Cryptography
sha3.workspace = true
sha2.workspace = true
ripemd.workspace = true
secp256k1.workspace = true
k256.workspace = true
blake3.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
rlp.workspace = true
rlp-derive.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Utils
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
lru.workspace = true
uuid.workspace = true
chrono.workspace = true
num_cpus.workspace = true
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
proptest = "1.4"

[[bench]]
name = "evm_bench"
harness = false
path = "../../benches/evm_bench.rs"
