[package]
name = "zeronet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZeroChain P2P networking layer"

[dependencies]
zerocore.workspace = true
zerostore.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true

# Networking
bytes.workspace = true
socket2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
rlp.workspace = true

# Utils
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
once_cell.workspace = true
uuid.workspace = true

# Cryptography
sha3.workspace = true

# Discovery
discv5 = "0.4"
libp2p = { version = "0.53", features = ["tcp", "yamux", "noise", "gossipsub", "mdns", "kad", "request-response"] }

[dev-dependencies]
tempfile = "3.9"
rand = "0.8"
