[package]
name = "zerostore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZeroChain storage layer - MPT Trie and database"

[dependencies]
zerocore.workspace = true

# Database
rocksdb = "0.21"
redb = "1.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
rlp.workspace = true
rlp-derive.workspace = true
hex.workspace = true

# Utils
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
lru.workspace = true
once_cell.workspace = true
smallvec = "1.11"

# Hashing
sha3.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile = "3.9"
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "trie_bench"
harness = false
path = "../../benches/trie_bench.rs"
